[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/Schoolday  Yandere Simulator OST.mp3" type="AudioStream" id=4]
[ext_resource path="res://level/House.gd" type="Script" id=5]
[ext_resource path="res://graphics/roomtileset.tres" type="TileSet" id=6]
[ext_resource path="res://UI/FadeScene.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 40 )

[node name="House" type="Node2D"]
script = ExtResource( 5 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="default" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 3276860, 30, 0, 3276861, 30, 0, 3276862, 30, 0, 3276863, 30, 0, 3276864, 30, 0, 3276865, 30, 0, 3276866, 30, 0, 3276867, 30, 0, 3276868, 30, 0, 3276869, 30, 0, 3276870, 30, 0, 3276871, 30, 0, 3276872, 30, 0, 3276873, 30, 0, 3276874, 30, 0, 3276875, 30, 0, 3276876, 30, 0, 3276877, 30, 0, 3276878, 30, 0, 3276879, 30, 0, 3276880, 30, 0, 3276881, 30, 0, 3276882, 30, 0, 3276883, 30, 0, 3276884, 30, 0, 3276885, 30, 0, 3276886, 30, 0, 3276887, 30, 0, 3276888, 30, 0, 3276889, 30, 0, 3276890, 30, 0, 3276891, 30, 0, 3276892, 30, 0, 3276893, 30, 0, 3276894, 30, 0, 3276895, 30, 0, 3276896, 30, 0, 3276897, 30, 0, 3276898, 30, 0, 3276899, 30, 0, 3276900, 30, 0, 3276901, 30, 0, 3276902, 30, 0, 3276903, 30, 0, 3276904, 30, 0, 3276905, 30, 0, 3276906, 30, 0, 3276907, 30, 0, 3276908, 30, 0, 3276909, 30, 0, 3276910, 30, 0, 3276911, 30, 0, 3276912, 30, 0, 3276913, 30, 0, 3276914, 30, 0, 3276915, 30, 0, 3276916, 30, 0, 3276917, 30, 0, 3276918, 30, 0, 3276919, 30, 0, 3342396, 30, 0, 3342397, 30, 0, 3342398, 30, 0, 3342399, 30, 0, 3342400, 30, 0, 3342401, 30, 0, 3342402, 30, 0, 3342403, 30, 0, 3342404, 30, 0, 3342405, 30, 0, 3342406, 30, 0, 3342407, 30, 0, 3342408, 30, 0, 3342409, 30, 0, 3342410, 30, 0, 3342411, 30, 0, 3342412, 30, 0, 3342413, 30, 0, 3342414, 30, 0, 3342415, 30, 0, 3342416, 30, 0, 3342417, 30, 0, 3342418, 30, 0, 3342419, 30, 0, 3342420, 30, 0, 3342421, 30, 0, 3342422, 30, 0, 3342423, 30, 0, 3342424, 30, 0, 3342425, 30, 0, 3342426, 30, 0, 3342427, 30, 0, 3342428, 30, 0, 3342429, 30, 0, 3342430, 30, 0, 3342431, 30, 0, 3342432, 30, 0, 3342433, 30, 0, 3342434, 30, 0, 3342435, 30, 0, 3342436, 30, 0, 3342437, 30, 0, 3342438, 30, 0, 3342439, 30, 0, 3342440, 30, 0, 3342441, 30, 0, 3342442, 30, 0, 3342443, 30, 0, 3342444, 30, 0, 3342445, 30, 0, 3342446, 30, 0, 3342447, 30, 0, 3342448, 30, 0, 3342449, 30, 0, 3342450, 30, 0, 3342451, 30, 0, 3342452, 30, 0, 3342453, 30, 0, 3342454, 30, 0, 3342455, 30, 0, 3407932, 30, 0, 3407933, 30, 0, 3407990, 30, 0, 3407991, 30, 0, 3473468, 30, 0, 3473469, 30, 0, 3473526, 30, 0, 3473527, 30, 0, 3539004, 30, 0, 3539005, 30, 0, 3539062, 30, 0, 3539063, 30, 0, 3604540, 30, 0, 3604541, 30, 0, 3604598, 30, 0, 3604599, 30, 0, 3670076, 30, 0, 3670077, 30, 0, 3670134, 30, 0, 3670135, 30, 0, 3735612, 30, 0, 3735613, 30, 0, 3735670, 30, 0, 3735671, 30, 0, 3801148, 30, 0, 3801149, 30, 0, 3801206, 30, 0, 3801207, 30, 0, 3866684, 30, 0, 3866685, 30, 0, 3866742, 30, 0, 3866743, 30, 0, 3932220, 30, 0, 3932221, 30, 0, 3932278, 30, 0, 3932279, 30, 0, 3997756, 30, 0, 3997757, 30, 0, 3997814, 30, 0, 3997815, 30, 0, 4063292, 30, 0, 4063293, 30, 0, 4063350, 30, 0, 4063351, 30, 0, 4128828, 30, 0, 4128829, 30, 0, 4128886, 30, 0, 4128887, 30, 0, 4194364, 30, 0, 4194365, 30, 0, 4194422, 30, 0, 4194423, 30, 0, 4259900, 30, 0, 4259901, 30, 0, 4259958, 30, 0, 4259959, 30, 0, 4325436, 30, 0, 4325437, 30, 0, 4325494, 30, 0, 4325495, 30, 0, 4390972, 30, 0, 4390973, 30, 0, 4391030, 30, 0, 4391031, 30, 0, 4456508, 30, 0, 4456509, 30, 0, 4456566, 30, 0, 4456567, 30, 0, 4522044, 30, 0, 4522045, 30, 0, 4522102, 30, 0, 4522103, 30, 0, 4587580, 30, 0, 4587581, 30, 0, 4587638, 30, 0, 4587639, 30, 0, 4653116, 30, 0, 4653117, 30, 0, 4653174, 30, 0, 4653175, 30, 0, 4718652, 30, 0, 4718653, 30, 0, 4718710, 30, 0, 4718711, 30, 0, 4784188, 30, 0, 4784189, 30, 0, 4784246, 30, 0, 4784247, 30, 0, 4849724, 30, 0, 4849725, 30, 0, 4849782, 30, 0, 4849783, 30, 0, 4915260, 30, 0, 4915261, 30, 0, 4915318, 30, 0, 4915319, 30, 0, 4980796, 30, 0, 4980797, 30, 0, 4980854, 30, 0, 4980855, 30, 0, 5046332, 30, 0, 5046333, 30, 0, 5046390, 30, 0, 5046391, 30, 0, 5111868, 30, 0, 5111869, 30, 0, 5111926, 30, 0, 5111927, 30, 0, 5177404, 30, 0, 5177405, 30, 0, 5177462, 30, 0, 5177463, 30, 0, 5242940, 30, 0, 5242941, 30, 0, 5242998, 30, 0, 5242999, 30, 0, 5308476, 30, 0, 5308477, 30, 0, 5308534, 30, 0, 5308535, 30, 0, 5374012, 30, 0, 5374013, 30, 0, 5374070, 30, 0, 5374071, 30, 0, 5439548, 30, 0, 5439549, 30, 0, 5439606, 30, 0, 5439607, 30, 0, 5505084, 30, 0, 5505085, 30, 0, 5505086, 30, 0, 5505087, 30, 0, 5505088, 30, 0, 5505089, 30, 0, 5505090, 30, 0, 5505091, 30, 0, 5505092, 30, 0, 5505093, 30, 0, 5505094, 30, 0, 5505095, 30, 0, 5505096, 30, 0, 5505097, 30, 0, 5505098, 30, 0, 5505099, 30, 0, 5505100, 30, 0, 5505101, 30, 0, 5505102, 30, 0, 5505103, 30, 0, 5505104, 30, 0, 5505105, 30, 0, 5505106, 30, 0, 5505107, 30, 0, 5505108, 30, 0, 5505109, 30, 0, 5505110, 30, 0, 5505111, 30, 0, 5505112, 30, 0, 5505113, 30, 0, 5505114, 30, 0, 5505115, 30, 0, 5505116, 30, 0, 5505117, 30, 0, 5505118, 30, 0, 5505119, 30, 0, 5505120, 30, 0, 5505121, 30, 0, 5505122, 30, 0, 5505123, 30, 0, 5505124, 30, 0, 5505125, 30, 0, 5505126, 30, 0, 5505127, 30, 0, 5505128, 30, 0, 5505129, 30, 0, 5505130, 30, 0, 5505131, 30, 0, 5505132, 30, 0, 5505133, 30, 0, 5505134, 30, 0, 5505135, 30, 0, 5505136, 30, 0, 5505137, 30, 0, 5505138, 30, 0, 5505139, 30, 0, 5505140, 30, 0, 5505141, 30, 0, 5505142, 30, 0, 5505143, 30, 0, 5570620, 30, 0, 5570621, 30, 0, 5570622, 30, 0, 5570623, 30, 0, 5570624, 30, 0, 5570625, 30, 0, 5570626, 30, 0, 5570627, 30, 0, 5570628, 30, 0, 5570629, 30, 0, 5570630, 30, 0, 5570631, 30, 0, 5570632, 30, 0, 5570633, 30, 0, 5570634, 30, 0, 5570635, 30, 0, 5570636, 30, 0, 5570637, 30, 0, 5570638, 30, 0, 5570639, 30, 0, 5570640, 30, 0, 5570641, 30, 0, 5570642, 30, 0, 5570643, 30, 0, 5570644, 30, 0, 5570645, 30, 0, 5570646, 30, 0, 5570647, 30, 0, 5570648, 30, 0, 5570649, 30, 0, 5570650, 30, 0, 5570651, 30, 0, 5570652, 30, 0, 5570653, 30, 0, 5570654, 30, 0, 5570655, 30, 0, 5570656, 30, 0, 5570657, 30, 0, 5570658, 30, 0, 5570659, 30, 0, 5570660, 30, 0, 5570661, 30, 0, 5570662, 30, 0, 5570663, 30, 0, 5570664, 30, 0, 5570665, 30, 0, 5570666, 30, 0, 5570667, 30, 0, 5570668, 30, 0, 5570669, 30, 0, 5570670, 30, 0, 5570671, 30, 0, 5570672, 30, 0, 5570673, 30, 0, 5570674, 30, 0, 5570675, 30, 0, 5570676, 30, 0, 5570677, 30, 0, 5570678, 30, 0, 5570679, 30, 0 )

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1703967, 32, 0, 1703968, 32, 0, 1703969, 32, 0, 1703970, 32, 0, 1703971, 32, 0, 1703972, 32, 0, 1703973, 32, 0, 1703974, 32, 0, 1703975, 32, 0, 1703976, 32, 0, 1703977, 32, 0, 1703978, 32, 0, 1703979, 32, 0, 1703980, 32, 0, 1703981, 32, 0, 1703982, 32, 0, 1703983, 32, 0, 1703984, 32, 0, 1703985, 32, 0, 1703986, 32, 0, 1703987, 32, 0, 1703988, 32, 0, 1703989, 32, 0, 1703990, 32, 0, 1703991, 32, 0, 1703992, 32, 0, 1703993, 32, 0, 1703994, 32, 0, 1769503, 22, 0, 1769504, 22, 0, 1769505, 22, 0, 1769506, 22, 0, 1769507, 22, 0, 1769508, 22, 0, 1769509, 22, 0, 1769510, 22, 0, 1769511, 22, 0, 1769512, 22, 0, 1769513, 22, 0, 1769514, 22, 0, 1769515, 22, 0, 1769516, 22, 0, 1769517, 22, 0, 1769518, 22, 0, 1769519, 22, 0, 1769520, 22, 0, 1769521, 22, 0, 1769522, 22, 0, 1769523, 22, 0, 1769524, 22, 0, 1769525, 22, 0, 1769526, 22, 0, 1769527, 22, 0, 1769528, 22, 0, 1769529, 22, 0, 1769530, 22, 0, 1835039, 22, 0, 1835040, 22, 0, 1835041, 22, 0, 1835042, 22, 0, 1835043, 22, 0, 1835044, 22, 0, 1835045, 22, 0, 1835046, 22, 0, 1835047, 22, 0, 1835048, 22, 0, 1835049, 22, 0, 1835050, 22, 0, 1835051, 22, 0, 1835052, 22, 0, 1835053, 22, 0, 1835054, 22, 0, 1835055, 22, 0, 1835056, 22, 0, 1835057, 22, 0, 1835058, 22, 0, 1835059, 22, 0, 1835060, 22, 0, 1835061, 22, 0, 1835062, 22, 0, 1835063, 22, 0, 1835064, 22, 0, 1835065, 22, 0, 1835066, 22, 0, 1900575, 22, 0, 1900576, 22, 0, 1900577, 22, 0, 1900578, 22, 0, 1900579, 22, 0, 1900580, 22, 0, 1900581, 22, 0, 1900582, 22, 0, 1900583, 22, 0, 1900584, 22, 0, 1900585, 22, 0, 1900586, 22, 0, 1900587, 22, 0, 1900588, 22, 0, 1900589, 22, 0, 1900590, 22, 0, 1900591, 22, 0, 1900592, 22, 0, 1900593, 22, 0, 1900594, 22, 0, 1900595, 22, 0, 1900596, 22, 0, 1900597, 22, 0, 1900598, 22, 0, 1900599, 22, 0, 1900600, 22, 0, 1900601, 22, 0, 1900602, 22, 0, 1966111, 22, 0, 1966112, 22, 0, 1966113, 22, 0, 1966114, 22, 0, 1966115, 22, 0, 1966116, 22, 0, 1966117, 22, 0, 1966118, 22, 0, 1966119, 22, 0, 1966120, 22, 0, 1966121, 22, 0, 1966122, 22, 0, 1966123, 22, 0, 1966124, 22, 0, 1966125, 22, 0, 1966126, 22, 0, 1966127, 22, 0, 1966128, 22, 0, 1966129, 22, 0, 1966130, 22, 0, 1966131, 22, 0, 1966132, 22, 0, 1966133, 22, 0, 1966134, 22, 0, 1966135, 22, 0, 1966136, 22, 0, 1966137, 22, 0, 1966138, 22, 0, 2031647, 22, 0, 2031648, 22, 0, 2031649, 22, 0, 2031650, 22, 0, 2031651, 22, 0, 2031652, 22, 0, 2031653, 22, 0, 2031654, 22, 0, 2031655, 22, 0, 2031656, 22, 0, 2031657, 22, 0, 2031658, 22, 0, 2031659, 22, 0, 2031660, 22, 0, 2031661, 22, 0, 2031662, 22, 0, 2031663, 22, 0, 2031664, 22, 0, 2031665, 22, 0, 2031666, 22, 0, 2031667, 22, 0, 2031668, 22, 0, 2031669, 22, 0, 2031670, 22, 0, 2031671, 22, 0, 2031672, 22, 0, 2031673, 22, 0, 2031674, 22, 0, 2097183, 22, 0, 2097184, 22, 0, 2097185, 22, 0, 2097186, 22, 0, 2097187, 22, 0, 2097188, 22, 0, 2097189, 22, 0, 2097190, 22, 0, 2097191, 22, 0, 2097192, 22, 0, 2097193, 22, 0, 2097194, 22, 0, 2097195, 22, 0, 2097196, 22, 0, 2097197, 22, 0, 2097198, 22, 0, 2097199, 22, 0, 2097200, 22, 0, 2097201, 22, 0, 2097202, 22, 0, 2097203, 22, 0, 2097204, 22, 0, 2097205, 22, 0, 2097206, 22, 0, 2097207, 22, 0, 2097208, 22, 0, 2097209, 22, 0, 2097210, 22, 0, 2162719, 22, 0, 2162720, 22, 0, 2162721, 22, 0, 2162722, 22, 0, 2162723, 22, 0, 2162724, 22, 0, 2162725, 22, 0, 2162726, 22, 0, 2162727, 22, 0, 2162728, 22, 0, 2162729, 22, 0, 2162730, 22, 0, 2162731, 22, 0, 2162732, 22, 0, 2162733, 22, 0, 2162734, 22, 0, 2162735, 22, 0, 2162736, 22, 0, 2162737, 22, 0, 2162738, 22, 0, 2162739, 22, 0, 2162740, 22, 0, 2162741, 22, 0, 2162742, 22, 0, 2162743, 22, 0, 2162744, 22, 0, 2162745, 22, 0, 2162746, 22, 0, 2228255, 22, 0, 2228256, 22, 0, 2228257, 22, 0, 2228258, 22, 0, 2228259, 22, 0, 2228260, 22, 0, 2228261, 22, 0, 2228262, 22, 0, 2228263, 22, 0, 2228264, 22, 0, 2228265, 22, 0, 2228266, 22, 0, 2228267, 22, 0, 2228268, 22, 0, 2228269, 22, 0, 2228270, 22, 0, 2228271, 22, 0, 2228272, 22, 0, 2228273, 22, 0, 2228274, 22, 0, 2228275, 22, 0, 2228276, 22, 0, 2228277, 22, 0, 2228278, 22, 0, 2228279, 22, 0, 2228280, 22, 0, 2228281, 22, 0, 2228282, 22, 0, 2293791, 22, 0, 2293792, 22, 0, 2293793, 22, 0, 2293794, 22, 0, 2293795, 22, 0, 2293796, 22, 0, 2293797, 22, 0, 2293798, 22, 0, 2293799, 22, 0, 2293800, 22, 0, 2293801, 22, 0, 2293802, 22, 0, 2293803, 22, 0, 2293804, 22, 0, 2293805, 22, 0, 2293806, 22, 0, 2293807, 22, 0, 2293808, 22, 0, 2293809, 22, 0, 2293810, 22, 0, 2293811, 22, 0, 2293812, 22, 0, 2293813, 22, 0, 2293814, 22, 0, 2293815, 22, 0, 2293816, 22, 0, 2293817, 22, 0, 2293818, 22, 0, 2359327, 22, 0, 2359328, 22, 0, 2359329, 22, 0, 2359330, 22, 0, 2359331, 22, 0, 2359332, 22, 0, 2359333, 22, 0, 2359334, 22, 0, 2359335, 22, 0, 2359336, 22, 0, 2359337, 22, 0, 2359338, 22, 0, 2359339, 22, 0, 2359340, 22, 0, 2359341, 22, 0, 2359342, 22, 0, 2359343, 22, 0, 2359344, 22, 0, 2359345, 22, 0, 2359346, 22, 0, 2359347, 22, 0, 2359348, 22, 0, 2359349, 22, 0, 2359350, 22, 0, 2359351, 22, 0, 2359352, 22, 0, 2359353, 22, 0, 2359354, 22, 0, 2424863, 22, 0, 2424864, 22, 0, 2424865, 22, 0, 2424866, 22, 0, 2424867, 22, 0, 2424868, 22, 0, 2424869, 22, 0, 2424870, 22, 0, 2424871, 22, 0, 2424872, 22, 0, 2424873, 22, 0, 2424874, 22, 0, 2424875, 22, 0, 2424876, 22, 0, 2424877, 22, 0, 2424878, 22, 0, 2424879, 22, 0, 2424880, 22, 0, 2424881, 22, 0, 2424882, 22, 0, 2424883, 22, 0, 2424884, 22, 0, 2424885, 22, 0, 2424886, 22, 0, 2424887, 22, 0, 2424888, 22, 0, 2424889, 22, 0, 2424890, 22, 0, 2490399, 22, 0, 2490400, 22, 0, 2490401, 22, 0, 2490402, 22, 0, 2490403, 22, 0, 2490404, 22, 0, 2490405, 22, 0, 2490406, 22, 0, 2490407, 22, 0, 2490408, 22, 0, 2490409, 22, 0, 2490410, 22, 0, 2490411, 22, 0, 2490412, 22, 0, 2490413, 22, 0, 2490414, 22, 0, 2490415, 22, 0, 2490416, 22, 0, 2490417, 22, 0, 2490418, 22, 0, 2490419, 22, 0, 2490420, 22, 0, 2490421, 22, 0, 2490422, 22, 0, 2490423, 22, 0, 2490424, 22, 0, 2490425, 22, 0, 2490426, 22, 0, 2555935, 22, 0, 2555936, 22, 0, 2555937, 22, 0, 2555938, 22, 0, 2555939, 22, 0, 2555940, 22, 0, 2555941, 22, 0, 2555942, 22, 0, 2555943, 22, 0, 2555944, 22, 0, 2555945, 22, 0, 2555946, 22, 0, 2555947, 22, 0, 2555948, 22, 0, 2555949, 22, 0, 2555950, 22, 0, 2555951, 22, 0, 2555952, 22, 0, 2555953, 22, 0, 2555954, 22, 0, 2555955, 22, 0, 2555956, 22, 0, 2555957, 22, 0, 2555958, 22, 0, 2555959, 22, 0, 2555960, 22, 0, 2555961, 22, 0, 2555962, 22, 0, 2621471, 22, 0, 2621472, 22, 0, 2621473, 22, 0, 2621474, 22, 0, 2621475, 22, 0, 2621476, 22, 0, 2621477, 22, 0, 2621478, 22, 0, 2621479, 22, 0, 2621480, 22, 0, 2621481, 22, 0, 2621482, 22, 0, 2621483, 22, 0, 2621484, 22, 0, 2621485, 22, 0, 2621486, 22, 0, 2621487, 22, 0, 2621488, 22, 0, 2621489, 22, 0, 2621490, 22, 0, 2621491, 22, 0, 2621492, 22, 0, 2621493, 22, 0, 2621494, 22, 0, 2621495, 22, 0, 2621496, 22, 0, 2621497, 22, 0, 2621498, 22, 0, 2687007, 22, 0, 2687008, 22, 0, 2687009, 22, 0, 2687010, 22, 0, 2687011, 22, 0, 2687012, 22, 0, 2687013, 22, 0, 2687014, 22, 0, 2687015, 22, 0, 2687016, 22, 0, 2687017, 22, 0, 2687018, 22, 0, 2687019, 22, 0, 2687020, 22, 0, 2687021, 22, 0, 2687022, 22, 0, 2687023, 22, 0, 2687024, 22, 0, 2687025, 22, 0, 2687026, 22, 0, 2687027, 22, 0, 2687028, 22, 0, 2687029, 22, 0, 2687030, 22, 0, 2687031, 22, 0, 2687032, 22, 0, 2687033, 22, 0, 2687034, 22, 0 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 0 )
zoom = Vector2( 0.5, 0.5 )

[node name="BottomRight" parent="Camera2D/Limits" index="0"]
position = Vector2( 1920, 1376 )

[node name="TopLeft" parent="Camera2D/Limits" index="1"]
position = Vector2( 960, 800 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="Objects" type="YSort" parent="YSort"]

[node name="Object" type="TileMap" parent="YSort/Objects"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 4980851, 9, 0, 5046336, 8, 0, 5046387, 9, 0, 5111923, 9, 0, 5177459, 9, 0, 5242995, 9, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Main" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="SchoolPos" type="Position2D" parent="."]
position = Vector2( 1808, 952 )

[node name="FirstPos" type="Position2D" parent="."]
position = Vector2( 1448, 1080 )

[node name="GotoSchool" type="Area2D" parent="."]
position = Vector2( 1880, 952 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GotoSchool"]
shape = SubResource( 1 )

[node name="FadeScene" parent="." instance=ExtResource( 8 )]

[connection signal="body_entered" from="GotoSchool" to="." method="_on_GotoSchool_body_entered"]
[connection signal="transitioned" from="FadeScene" to="." method="_on_FadeScene_transitioned"]

[editable path="Camera2D"]
